# pptmaker

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: bootstrap-region.yml  bootstrap.yml  ci.yml  create-user.yml  nightly.yml
app/api/: __init__.py  blueprint_worker.py  config.py  main.py  requirements.txt  revision_worker.py
app/render/: Dockerfile  __init__.py  db_status.py  handler.py  icon_renderer.py  layout_designer.py  layout_renderer.py  layout_spec.py  media.py  palettes.py  pptx_assembler.py  preview.py  requirements.txt  shapes.py  slot_extractor.py  template_loader.py  template_meta.py  theme_loader.py  typography.py
app/web/: .env.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
docs/: 01_prompt_engineering.md  02_ui_ux_design.md  03_ops_and_testing.md  04_template_and_plugin.md  05_security_compliance.md  06_business_plan.md  07_phase2_design.md  08_implementation_flow.md  DXDesignAccounting_Template.pptx  DXDesignSystem_Template.pptx  SlideForge_概要設計書.md  bootstrap.md  custom_domain_plan.md  npm_supply_chain_audit.md  visual_qa_workflow.md  【XX様向け】DXDesignSystem_Proposal_202604.pptx
evals/: runner.py
evals/cases/: case01_internal_tool.yaml  case02_consulting.yaml
infra/: app.py  cdk.json  requirements.txt
infra/bootstrap/: gha-permission.json  gha-trust.json
infra/stacks/: app_stack.py  cert_stack.py  data_stack.py  obs_stack.py  pipeline_stack.py
outputs/: DXDesignSystem_Proposal.pptx
scripts/: build_figures_part1.py  build_figures_part2.py  build_figures_part3.py  build_figures_part4.py  generate_samples.py  normalize_template.py  samples_catalog.py  shape_lib.py
(+132 files in other folders)
