[project]
name = "slideforge"
version = "0.1.0"
description = "Template-driven AI slide generator"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["scripts/", "cdk.out/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["app", "."]
addopts = "-ra -q"
asyncio_mode = "auto"
